Small styling fixes #181
-Modified sidebar breakpoint
-Improved page scrolling
-Fixed issue where horizontal scroll bar was showing in chatroom

--- a/public/css/mainStyle.css
+++ b/public/css/mainStyle.css
@@ -907,34 +907,34 @@ input::-webkit-input-placeholder {
     transform: translateY(-1200px) rotate(600deg); } }
 .sideBar {
   z-index: 99;
-  transition: transform ease-in 0.5s; }
+  transition: transform ease-in 0.3s; }
 
-@media screen and (max-width: 767px) {
+@media screen and (max-width: 720px) {
   .shadow-active {
     position: absolute;
     width: 100%;
     height: 100%;
-    background-color: rgba(0, 0, 0, 0.8);
-    transition: background-color 0.4s;
+    background-color: rgba(0, 0, 0, 0.75);
+    transition: background-color 0.3s;
     z-index: 99; }
 
   .rightContent {
-    transition: transform 0.5s ease-in;
-    transform: translateX(-70%);
+    transition: transform 0.3s ease-in;
+    transform: translateX(-60%);
     position: absolute;
     width: 100% !important; }
 
   .content-container-moveX {
     transform: translateX(0%) !important; } }
-@media screen and (max-width: 767px) and (-webkit-min-device-pixel-ratio: 0) and (min-resolution: 0.001dpcm) {
+@media screen and (max-width: 720px) and (-webkit-min-device-pixel-ratio: 0) and (min-resolution: 0.001dpcm) {
   .rightContent {
     transform: translateX(0%); }
 
   .content-container-moveX {
-    transform: translateX(70%) !important; } }
-@media screen and (max-width: 767px) {
+    transform: translateX(60%) !important; } }
+@media screen and (max-width: 720px) {
   .sideBar {
-    width: 70% !important;
+    width: 60% !important;
     transform: translateX(-100%); }
 
   .sideBarOpen {
@@ -1008,7 +1008,7 @@ input::-webkit-input-placeholder {
     background-color: #EAEDF1;
     height: calc(100vh - 120px);
     position: relative;
-    overflow: scroll; }
+    overflow-y: scroll; }
     .classroom .window .message-list {
       list-style: none;
       padding-left: 60px;
